gitops/apps/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/part-of: platform-gitops
    app.kubernetes.io/name: vault
